home and play done

--- a/play.html
+++ b/play.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>Good Game</h1>
-    {{ define "tab" }}
+    {{ template "tab" }}
     <form action="/" method="post">
         <button type="submit">Retour au menu</button>
     </form>
