modified play and tab

--- a/play.html
+++ b/play.html
@@ -10,7 +10,7 @@
     <h1>Good Game</h1>
     {{ template "tab" }}
     <form action="/" method="post">
-        <button type="submit">Retour au menu</button>
+        <button type="submit">Back</button>
     </form>
 </body>
 </html>
